--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="textbox">
             <input type="text" class="field" id="newitem"></input>
             <button class="btn" onclick="add()"><i class='fa fa-plus'></i></button>
-            <button class="btn" onclick="clean()"><i class='fa fa-times'></i></button>
+            <button class="btn" onclick="topic()"><i class='fa fa-check'></i></button>
+            <button class="btn" onclick="clean()"><i class='fa fa-minus'></i></button>
         </div>
     </div>
     <div id="content-frame">
