--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 
         <div class="textbox">
             <input type="text" class="field" id="newitem"></input>
-            <button class="btn" onclick="add()"><i class='fa fa-plus'></i></button>
-            <button class="btn" onclick="topic()"><i class='fa fa-check'></i></button>
-            <button class="btn" onclick="clean()"><i class='fa fa-minus'></i></button>
+        </div>
+        <div class="textbox">
+            <div style="width:80%; margin-left:auto; margin-right:auto;">
+                <button class="btn" onclick="add()"><i class='fa fa-plus'></i></button>
+                <button class="btn" onclick="topic()"><i class='fa fa-check'></i></button>
+                <button class="btn" onclick="clean()"><i class='fa fa-minus'></i></button>
+            </div>
         </div>
     </div>
     <div id="content-frame">
