--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,height=device-height initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="notie.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>To-Do List</title>
@@ -16,7 +17,7 @@
             <input type="text" class="field" id="newitem"></input>
         </div>
         <div class="textbox">
-            <textarea rows="4" cols="50" type="text" class="field" id="newdesc" style="height: 50px; resize:none"></textarea>
+            <input type="text" class="field" id="newdesc"></input>
         </div>
         <div class="textbox">
             <button class="btn" onclick="add()"><i class='fa fa-plus'></i></button>
